amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/is-not-input-type-fields.api.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/is-not-input-type-fields.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 6

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-input-type
  Message: Type 'Object1' from field 'objectField' must be an input type
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/is-not-input-type-fields.api.graphql#/declares/shape/InputType
  Property: http://www.w3.org/ns/shacl#property
  Range: [(12,4)-(12,24)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-input-type
  Message: Type '[Object1]' from field 'objectFieldList' must be an input type
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/is-not-input-type-fields.api.graphql#/declares/shape/InputType
  Property: http://www.w3.org/ns/shacl#property
  Range: [(13,4)-(13,30)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-input-type
  Message: Type '[Object1]' from field 'objectFieldListRequired' must be an input type
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/is-not-input-type-fields.api.graphql#/declares/shape/InputType
  Property: http://www.w3.org/ns/shacl#property
  Range: [(14,4)-(14,39)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-input-type
  Message: Type '[Object1]' from field 'objectFieldListUltraRequired' must be an input type
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/is-not-input-type-fields.api.graphql#/declares/shape/InputType
  Property: http://www.w3.org/ns/shacl#property
  Range: [(15,4)-(15,45)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-input-type
  Message: Type 'Interface' from field 'interfaceField' must be an input type
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/is-not-input-type-fields.api.graphql#/declares/shape/InputType
  Property: http://www.w3.org/ns/shacl#property
  Range: [(16,4)-(16,29)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-input-type
  Message: Type 'Union' from field 'unionField' must be an input type
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/is-not-input-type-fields.api.graphql#/declares/shape/InputType
  Property: http://www.w3.org/ns/shacl#property
  Range: [(17,4)-(17,21)]
  Location: 
